# voice-note-digester

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  vercel.json
configs/: ft-gemma-3-4b-lora.yaml  gemma-3-4b-it-ft.yaml  gemma-3-4b-it-promptv2.yaml  gemma-3-4b-it.yaml  sarvam-30b-gguf.yaml  sarvam-translate-4b.yaml
data/: notes.db
data/eval_scripts/: bn.jsonl  hi-en.jsonl  hi.jsonl  ta.jsonl
demo/: app.py
demo/static/: config.js  index.html
hf/: card-gguf.md  card-lora.md  card-stt.md
scripts/: generate_training_data.py  push_to_hub.py  synthesize_eval_data.py  traindata_bn.py  traindata_hi.py  traindata_hien.py  traindata_ta.py
src/voice_digester/: api.py  asr_round_trip.py  config.py  digest.py  embed.py  eval_data.py  eval_metrics.py  evaluate.py  export_gguf.py  fine_tune.py  ingest.py  lid.py  modal_infra.py  paths.py  pipeline.py  quantize_stt.py  schema.py  search.py  service.py  stt.py  vector_store.py  web.py
tests/: test_config.py  test_eval_data.py  test_eval_metrics.py  test_schema.py  test_vector_store.py
tests/fixtures/eval_scripts/: synth-hi-001.json  synth-hien-002.json  synth-ta-003.json
