[project]
name = "voice-note-digester"
version = "0.1.0"
description = "On-device WhatsApp voice-note digester: local Indic STT + one structured Sarvam call -> summary, translation, action items, locally searchable."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "sqlite-vec>=0.1",
]

[dependency-groups]
dev = ["pytest>=8.0"]
# Remaining heavy runtime deps (llama-cpp-python, sqlite-vec, an embedding
# model) are added when each stage is implemented. Sarvam-30B reference evals
# and the ASR round-trip run on Modal, never locally (see D004).
synth = ["sarvamai>=0.1"]  # Bulbul TTS for eval-data synthesis only — never used at runtime
# STT locally (make transcribe) — batch jobs go to Modal instead (8 GB laptop).
stt = ["torch>=2.0", "torchaudio>=2.0", "transformers>=4.40", "numpy>=1.26", "onnx", "onnxruntime"]
# Digest stage + local eval: 4B Q4 GGUF fits the laptop (approved GGUF pattern).
digest = ["llama-cpp-python>=0.3", "huggingface_hub>=0.23", "sacrebleu>=2.4"]
# Embeddings for ingest/search (MiniLM, 22M params — light enough for local).
store = ["sentence-transformers>=3.0"]
eval = ["modal>=0.64"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voice_digester"]

[tool.pytest.ini_options]
pythonpath = ["src"]
